Add new Projects hero

--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -80,7 +80,7 @@
     
     @media (min-width: 769px) {
       .home .container.parent {
-        background-image: url('/uploads/projects_hucbb380096eafb9555b439a32689a55d0_507872_1440x720_fill_box_topleft_2.png');
+        background-image: url('/uploads/projects-streetscene_hu76ee811183c831bbe8357ae419035de3_2237296_1440x720_fill_q70_box_topleft.jpg');
         background-color: rgba(10, 61, 95, 0.3) !important;
         background-blend-mode: multiply;
         background-size: 1440px auto;
@@ -89,7 +89,7 @@
       }
     }
     #home-jumbotron {
-      background-image: url('/uploads/projects_hucbb380096eafb9555b439a32689a55d0_507872_1440x720_fill_box_topleft_2.png');
+      background-image: url('/uploads/projects-streetscene_hu76ee811183c831bbe8357ae419035de3_2237296_1440x720_fill_q70_box_topleft.jpg');
     }
   
 
@@ -197,7 +197,7 @@
 
 
 
-<div id="" class="jumbotron row" style="background-image: url('/uploads/projects_hucbb380096eafb9555b439a32689a55d0_507872_1024x310_fill_box_topleft_2.png');">
+<div id="" class="jumbotron row" style="background-image: url('/uploads/projects-streetscene_hu76ee811183c831bbe8357ae419035de3_2237296_2880x872_fill_q70_box_bottomleft.jpg');">
 </div>
 
 
