--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -9,5 +9,36 @@
 <body>
   <!-- Include the script that builds the page and powers Netlify CMS -->
   <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+  <script>
+    CMS.registerEditorComponent({
+      // Internal id of the component
+      id: "breaker",
+      // Visible label
+      label: "Breaker Image",
+      // Fields the user need to fill out when adding an instance of the component
+      fields: [{name: 'breaker_image', label: 'Breaker Image', widget: 'image'}],
+      // Pattern to identify a block as being an instance of this component
+      pattern: /^{{% breaker image="(\S+)" %}}$/,
+      // Function to extract data elements from the regexp match
+      fromBlock: function(match) {
+        return {
+          breaker_image: match[1]
+        };
+      },
+      // Function to create a text block from an instance of this component
+      toBlock: function(obj) {
+        return (
+          '{{% breaker image="' + obj.breaker_image + '" %}}'
+        );
+      },
+      // Preview output for this component. Can either be a string or a React component
+      // (component gives better render performance)
+      toPreview: function(obj) {
+        return (
+          '{{% breaker image="' + obj.breaker_image + '" %}}'
+        );
+      }
+    });
+  </script>
 </body>
 </html>
