--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -35,7 +35,42 @@
       // (component gives better render performance)
       toPreview: function(obj) {
         return (
-          '{{% breaker image="' + obj.breaker_image + '" %}}'
+          '<img src="' + obj.breaker_image + '" style="width:100%;height:275px;">'
+        );
+      }
+    });
+    CMS.registerEditorComponent({
+      // Internal id of the component
+      id: "floatimage",
+      // Visible label
+      label: "Float Image",
+      // Fields the user need to fill out when adding an instance of the component
+      fields: [
+        {name: 'float', label: 'Float', widget: 'select', options: ["right", "left"]},
+        {name: 'image', label: 'Float Image', widget: 'image'}
+      ],
+      // Pattern to identify a block as being an instance of this component
+      // pattern: /^{{% breaker image="(\S+)" %}}$/,
+      pattern: /^{{% floatimage float="(\S+)" image="(\S+)" %}}$/,
+      // Function to extract data elements from the regexp match
+      fromBlock: function(match) {
+        return {
+          float: match[1],
+          image: match[2]
+        };
+      },
+      // Function to create a text block from an instance of this component
+      toBlock: function(obj) {
+        return (
+          // '{{% breaker image="' + obj.breaker_image + '" %}}'
+          '{{% floatimage float="' + obj.float + '" image="' + obj.image + '" %}}'
+        );
+      },
+      // Preview output for this component. Can either be a string or a React component
+      // (component gives better render performance)
+      toPreview: function(obj) {
+        return (
+          '<img class="float-img float-' + obj.float + '" src="' + obj.image + '" width="296" height="214">'
         );
       }
     });
